resets and first outlook conditional statement added

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="color-scheme" content="light dark">
-        <meta name="supported-color-schemes" content="light dark">
+        <!-- <meta name="color-scheme" content="light dark">
+        <meta name="supported-color-schemes" content="light dark"> -->
         <title>HBO MAX Weekend Watch Guide</title>
         <style type="text/css">
             @media screen and (max-width: 599.98px) {
@@ -21,35 +21,18 @@
             }
         </style>
     </head>
-    <body>
+    <body style="Margin: 0; padding: 0; min-width: 100%; background-color: #DDE0E1;">
+
+        <!--[if (gte mso 9)|(IE)]>
+            <style type="text/css">
+                body {background-color: #DDE0E1!important;}
+                body, table, td, p, a {font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;}
+            </style>
+        <![endif]-->
 
 
-        <!-- START SOCIAL ICONS -->
-        <!-- END SOCIAL ICONS -->
-
-        <!-- START LOGO -->
-        <!-- END LOGO -->
-
-        <!-- START BANNER -->
-        <!-- END BANNER -->
-
-        <!-- START TWO COLUMNS -->
-        <!-- END TWO COLUMNS -->
-
-        <!-- START TWO THIRDS COLUMNS -->
-        <!-- END TWO THIRDS COLUMNS -->
-
-        <!-- START THREE COLUMNS -->
-        <!-- END THREE COLUMNS -->
-
-        <!-- START FOUR COLUMNS -->
-        <!-- END FOUR COLUMNS -->
-
-        <!-- START GREEN BORDER -->
-        <!-- END GREEN BORDER -->
-
-        <!-- START FOOTER -->
-        <!-- END FOOTER -->
+        <!-- START LOGO BANNER -->
+        <!-- END LOGO BANNER -->
 
 
     </body>
