centering and box shadow added

--- a/index.html
+++ b/index.html
@@ -30,10 +30,15 @@
             </style>
         <![endif]-->
 
+        <center style="width: 100%; table-layout: fixed; background-color: #DDE0E1; padding-bottom: 40px;">
+            <div style="max-width: 600px; background-color: #FFFFFF; box-shadow: 0 0 10px rgba(0, 0, 0, .2);">
 
-        <!-- START LOGO BANNER -->
-        <!-- END LOGO BANNER -->
+                <!-- START LOGO BANNER -->
+                <h1>test</h1>
+                <!-- END LOGO BANNER -->
 
+            </div>
+        </center>
 
     </body>
 </html>
