preheader text added

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
         <center style="width: 100%; table-layout: fixed; background-color: #DDE0E1; padding-bottom: 40px;">
             <div style="max-width: 600px; background-color: #FFFFFF; box-shadow: 0 0 10px rgba(0, 0, 0, .2);">
 
+                <!-- Preheader text start -->
+                <div style="font-size: 0px; color: #FFFFFF; line-height: 1px; mso-line-height-rule: exactly; display: none; max-width: 0px; max-height: 0px; opacity: 0; overflow: hidden; mso-hide: all;">
+                    It's time to shake things up. Return to Gotham, honor the life of Prince, and discover the future of comedy. Marlon Wayans Presents:
+                    The Headliners. Marlon Wayans presents several comedians who've been opening acts for his performances. On this night, they're the headliners.
+                </div>
+                <!-- Preheader text end -->
+
                 <!-- START LOGO BANNER -->
                 <h1>test</h1>
                 <!-- END LOGO BANNER -->
