main table and outlook statement added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
         <meta name="supported-color-schemes" content="light dark"> -->
         <title>HBO MAX Weekend Watch Guide</title>
         <style type="text/css">
+            table {
+                border-spacing: 0;
+            }
+            td {
+                padding: 0;
+            }
+            p {
+                font-size: 16px;
+            }
+            img {
+                border: 0;
+            }
             @media screen and (max-width: 599.98px) {
 
             }
@@ -20,6 +32,13 @@
 
             }
         </style>
+
+        <!--[if (gte mso 9)|(IE)]>
+            <style type="text/css">
+                table {border-collapse: collapse!important;}
+            </style>
+        <![endif]-->
+
     </head>
     <body style="Margin: 0; padding: 0; min-width: 100%; background-color: #DDE0E1;">
 
@@ -40,9 +59,25 @@
                 </div>
                 <!-- Preheader text end -->
 
-                <!-- START LOGO BANNER -->
-                <h1>test</h1>
-                <!-- END LOGO BANNER -->
+                <!--[if (gte mso 9)|(IE)]>
+                    <table width="600" align="center" style="border-spacing: 0; color: #000000;" role="presentation">
+                    <tr>
+                    <td style="padding: 0;">
+                <![endif]-->
+
+                <table align="center" style="border-spacing: 0; color: #000000; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; Margin: 0; padding: 0; max-width: 600px;" role="presentation">
+
+                    <!-- START LOGO BANNER -->
+                    <h1>test</h1>
+                    <!-- END LOGO BANNER -->
+
+                </table>
+
+                <!--[if (gte mso 9)|(IE)]>
+                    </td>
+                    </tr>
+                    </table>
+                <![endif]-->
 
             </div>
         </center>
